--- a/help/using/docs-updates/docs-2017.md
+++ b/help/using/docs-updates/docs-2017.md
@@ -7,10 +7,10 @@ title: Mises à jour de la documentation 2017
 uuid: 575245c0-68ae-4ba1-8041-4217e55f4103
 feature: Présentation
 exl-id: a3a1f03c-5073-4de7-ad57-5c9999f7c4f3
-source-git-commit: 4d3c859cc4dc5294286680b0e63c287e0409f7fd
+source-git-commit: 319be4dade263c5274624f07616b404decb7066f
 workflow-type: tm+mt
-source-wordcount: '2014'
-ht-degree: 25%
+source-wordcount: '2004'
+ht-degree: 23%
 
 ---
 
@@ -18,7 +18,7 @@ ht-degree: 25%
 
 Liste de la documentation nouvelle ou révisée publiée en 2017 et les années précédentes. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
 
-Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.com/content/help/fr-FR/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2018.md).
+Consultez les [Notes de mise à jour d’Experience Cloud](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2018.md).
 
 ## Décembre 2017 {#dec-17}
 
@@ -35,7 +35,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
    <td colname="col2"> <p>Ajout d’une section sur la résolution des problèmes. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p><a href="https://docs.adobe.com/content/help/fr-FR/core-services/interface/ec-cookies/cookies-am.html" format="https" scope="external"> Cookies Audience Manager</a> </p> </td> 
+   <td colname="col1"> <p><a href="https://experienceleague.adobe.com/docs/core-services/interface/ec-cookies/cookies-am.html" format="https" scope="external"> Cookies Audience Manager</a> </p> </td> 
    <td colname="col2"> <p> Obsolescence du cookie DST et ajout d’informations sur la durée de vie des cookies demdex et dextp lorsque l’utilisateur s’exclut de la collecte des données. </p> </td> 
   </tr> 
  </tbody> 
@@ -397,7 +397,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
    <td colname="col2"> <p>Ajout d’un nouveau document expliquant pourquoi <span class="keyword"> l’Audience Manager</span> effectue des appels au domaine <code> demdex.net</code>. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p><a href="https://docs.adobe.com/content/help/en/core-services/interface/ec-cookies/cookies-am.html" format="https" scope="external"> Cookies Audience Manager</a> </p> </td> 
+   <td colname="col1"> <p><a href="https://experienceleague.adobe.com/docs/core-services/interface/ec-cookies/cookies-am.html" format="https" scope="external"> Cookies Audience Manager</a> </p> </td> 
    <td colname="col2"> <p>Révision et mise à jour avec de nouvelles informations. </p> </td> 
   </tr> 
  </tbody> 
@@ -471,7 +471,7 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
    <td colname="col2"> <p>Ajout de 1, 14, 90 jours et de périodes d’analyse de durée de vie pour la population de segments totale et en temps réel. </p> </td> 
   </tr> 
   <tr> 
-   <td colname="col1"> <p><a href="https://docs.adobe.com/content/help/en/core-services/interface/more-resources/dns-prefetch.html" format="https" scope="external"> Utilisation de la prérécupération DNS avec différentes solutions Experience Cloud</a> </p> </td> 
+   <td colname="col1"> <p><a href="https://experienceleague.adobe.com/docs/core-services/interface/more-resources/dns-prefetch.html" format="https" scope="external"> Utilisation de la prérécupération DNS avec différentes solutions Experience Cloud</a> </p> </td> 
    <td colname="col2"> <p>Décrit comment mettre en oeuvre la prérécupération DNS pour réduire les temps de chargement des pages. </p> </td> 
   </tr> 
   <tr> 
@@ -548,4 +548,4 @@ Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.co
 
 ## Années précédentes {#prev}
 
-Liens vers les notes de mise à jour et les modifications apportées à la documentation de [!DNL Audience Manager]. Pour consulter une archive des modifications antérieures au niveau [!DNL Experience Cloud], voir la section [Notes de mise à jour précédentes](https://docs.adobe.com/content/help/en/release-notes/experience-cloud/current.html) .
+Liens vers les notes de mise à jour et les modifications apportées à la documentation de [!DNL Audience Manager]. Pour consulter une archive des modifications antérieures au niveau [!DNL Experience Cloud], voir la section [Notes de mise à jour précédentes](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html) .
