--- a/help/using/docs-updates/docs-2019.md
+++ b/help/using/docs-updates/docs-2019.md
@@ -7,10 +7,10 @@ title: Mises à jour de la documentation 2019
 uuid: 75592371-8e97-440a-9cdc-417498d13d6c
 feature: Présentation
 exl-id: 3cc664e4-67e8-48b8-980a-db3f3fe327f6
-source-git-commit: 4d3c859cc4dc5294286680b0e63c287e0409f7fd
+source-git-commit: 319be4dade263c5274624f07616b404decb7066f
 workflow-type: tm+mt
-source-wordcount: '1400'
-ht-degree: 48%
+source-wordcount: '1396'
+ht-degree: 47%
 
 ---
 
@@ -18,7 +18,7 @@ ht-degree: 48%
 
 Une liste de la documentation nouvelle ou révisée publiée en 2019. Inclut des mises à jour mineures de la documentation d’Audience Manager qui pourraient ne pas figurer dans les notes de mise à jour d’Experience Cloud.
 
-Consultez les [Notes de mise à jour d’Experience Cloud](https://docs.adobe.com/content/help/fr-FR/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2018.md).
+Consultez les [Notes de mise à jour d’Experience Cloud](https://experienceleague.adobe.com/docs/release-notes/experience-cloud/current.html) pour prendre connaissance des modifications apportées à [!DNL Audience Manager] et aux autres solutions d’[!DNL Experience Cloud]. Pour consulter les anciennes notes de mise à jour, reportez-vous à la section [Années précédentes](../docs-updates/docs-2018.md).
 
 ## Novembre 2019 {#aam-november-updates}
 
@@ -77,7 +77,7 @@ Aucune mise à jour majeure de la documentation n’est à annoncer pour le mois
 |--- |----|
 | [Obscurcissement des adresses IP](/help/using/features/administration/ip-obfuscation.md) | Votre entreprise peut souhaiter obscurcir l’adresse IP dans de nombreux pays en raison de la réglementation mondiale en matière de confidentialité. Audience Manager vous permet d’obsurcir les adresses IP des visiteurs de manière globale ou pays par pays. |
 | [Intégration Facebook WCA](/help/using/integration/integrating-third-party/facebook-wca-integration.md) | Cette page illustre le processus de création de pixels d’audiences personnalisées du site web Facebook (WCA) dans le but d’envoyer des segments d’audience d’Audience Manager basés sur le web à Facebook, à des fins de ciblage des publicités en ligne avec une transparence améliorée. |
-| [Module d’Audience Manager pour le TCF de l’IAB](/help/using/overview/data-security-and-privacy/aam-iab-plugin.md) | Un aspect important des obligations de confidentialité que vous avez envers vos utilisateurs réside dans l’acquisition et le respect des choix des utilisateurs quant à la façon dont leurs données personnelles sont utilisées (c’est-à-dire les « objectifs ») et quant aux entités qui les utilisent (les « sociétés »). Adobe vous fournit les moyens de gérer et de communiquer les choix de confidentialité de vos utilisateurs via la [fonctionnalité d’accord préalable](https://docs.adobe.com/content/help/fr-FR/id-service/using/implementation/opt-in-service/optin-overview.html) et la prise en charge du [Transparency and Consent Framework (TCF) de l’IAB. ](https://iabtechlab.com/standards/gdpr-transparency-and-consent-framework/) <br> <br>  Cet article décrit les cas d’utilisation d’Audience Manager qui prennent en charge le TCF de l’IAB et l’implémentation de la prise en charge du TCF de l’IAB dans Audience Manager. |
+| [Module d’Audience Manager pour le TCF de l’IAB](/help/using/overview/data-security-and-privacy/aam-iab-plugin.md) | Un aspect important des obligations de confidentialité que vous avez envers vos utilisateurs réside dans l’acquisition et le respect des choix des utilisateurs quant à la façon dont leurs données personnelles sont utilisées (c’est-à-dire les « objectifs ») et quant aux entités qui les utilisent (les « sociétés »). Adobe vous fournit les moyens de gérer et de communiquer les choix de confidentialité de vos utilisateurs via la [fonctionnalité d’accord préalable](https://experienceleague.adobe.com/docs/id-service/using/implementation/opt-in-service/optin-overview.html) et la prise en charge du [Transparency and Consent Framework (TCF) de l’IAB. ](https://iabtechlab.com/standards/gdpr-transparency-and-consent-framework/) <br> <br>  Cet article décrit les cas d’utilisation d’Audience Manager qui prennent en charge le TCF de l’IAB et l’implémentation de la prise en charge du TCF de l’IAB dans Audience Manager. |
 
 ## Mars 2019 {#aam-march-updates}
 
